@@ -7,7 +7,11 @@ update-manager (1:0.63) gutsy; urgency=low
   * DistUpgrade/DistUpgrade.cfg:
     - set python2.3 to remove list to ensure smooth upgrade 
       (Fixes LP: #108147)
+  * DistUpgrade/DistUpgradeControler.py:
+    - show total needed space in not-enough-free-space message
+      (Fixes LP: #104337)
     - fix in snapshot feature (Fixes LP: #108413)
+    - deal better with very slow downloads (disable cache cleanup)
   * Separate downloading and upgrading (Fixes LP: #91978)
   * Show demotions before runing the upgrade (Fixes LP: #91998)
 
